@@ -97,6 +97,22 @@ name|hadoop
 operator|.
 name|hive
 operator|.
+name|metastore
+operator|.
+name|MetaStoreUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hive
+operator|.
 name|ql
 operator|.
 name|Context
@@ -1536,9 +1552,6 @@ name|db
 parameter_list|,
 name|ASTNode
 name|ast
-parameter_list|,
-name|boolean
-name|forceCreatePartition
 parameter_list|)
 throws|throws
 name|SemanticException
@@ -1587,9 +1600,75 @@ name|db
 operator|.
 name|getTable
 argument_list|(
+name|MetaStoreUtils
+operator|.
+name|DEFAULT_DATABASE_NAME
+argument_list|,
 name|tableName
 argument_list|)
 expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|InvalidTableException
+name|ite
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|SemanticException
+argument_list|(
+name|ErrorMsg
+operator|.
+name|INVALID_TABLE
+operator|.
+name|getMsg
+argument_list|(
+name|ast
+operator|.
+name|getChild
+argument_list|(
+literal|0
+argument_list|)
+argument_list|)
+argument_list|,
+name|ite
+argument_list|)
+throw|;
+block|}
+catch|catch
+parameter_list|(
+name|HiveException
+name|e
+parameter_list|)
+block|{
+throw|throw
+operator|new
+name|SemanticException
+argument_list|(
+name|ErrorMsg
+operator|.
+name|GENERIC_ERROR
+operator|.
+name|getMsg
+argument_list|(
+name|ast
+operator|.
+name|getChild
+argument_list|(
+name|childIndex
+argument_list|)
+argument_list|,
+name|e
+operator|.
+name|getMessage
+argument_list|()
+argument_list|)
+argument_list|,
+name|e
+argument_list|)
+throw|;
+block|}
 comment|// get partition metadata if partition specified
 if|if
 condition|(
@@ -1697,28 +1776,27 @@ name|val
 argument_list|)
 expr_stmt|;
 block|}
+try|try
+block|{
+comment|// this doesn't create partition. partition is created in MoveTask
 name|partHandle
 operator|=
-name|Hive
-operator|.
-name|get
-argument_list|()
-operator|.
-name|getPartition
+operator|new
+name|Partition
 argument_list|(
 name|tableHandle
 argument_list|,
 name|partSpec
 argument_list|,
-name|forceCreatePartition
+literal|null
 argument_list|)
 expr_stmt|;
-if|if
-condition|(
-name|partHandle
-operator|==
-literal|null
-condition|)
+block|}
+catch|catch
+parameter_list|(
+name|HiveException
+name|e
+parameter_list|)
 block|{
 throw|throw
 operator|new
@@ -1740,68 +1818,6 @@ argument_list|)
 argument_list|)
 throw|;
 block|}
-block|}
-block|}
-catch|catch
-parameter_list|(
-name|InvalidTableException
-name|ite
-parameter_list|)
-block|{
-throw|throw
-operator|new
-name|SemanticException
-argument_list|(
-name|ErrorMsg
-operator|.
-name|INVALID_TABLE
-operator|.
-name|getMsg
-argument_list|(
-name|ast
-operator|.
-name|getChild
-argument_list|(
-literal|0
-argument_list|)
-argument_list|)
-argument_list|,
-name|ite
-argument_list|)
-throw|;
-block|}
-catch|catch
-parameter_list|(
-name|HiveException
-name|e
-parameter_list|)
-block|{
-throw|throw
-operator|new
-name|SemanticException
-argument_list|(
-name|ErrorMsg
-operator|.
-name|GENERIC_ERROR
-operator|.
-name|getMsg
-argument_list|(
-name|ast
-operator|.
-name|getChild
-argument_list|(
-name|childIndex
-argument_list|)
-argument_list|,
-name|e
-operator|.
-name|getMessage
-argument_list|()
-argument_list|)
-argument_list|,
-name|e
-argument_list|)
-throw|;
 block|}
 block|}
 specifier|public
