@@ -5389,8 +5389,6 @@ operator|.
 name|db
 argument_list|,
 name|ast
-argument_list|,
-literal|true
 argument_list|)
 decl_stmt|;
 if|if
